changed to units enums
