# src/main/resources/openapi/documentation.yaml
@@ -1,11 +1,10 @@
-openapi: "3.0.3"
+openapi: "3.1.0"
 info:
   title: "PartManager API"
   description: "PartManager API"
   version: "1.0.0"
 servers:
-- url: "http://localhost:8080"
-- url: "https://part01.klaffenboeck.eu/api"
+- url: "https://localhost:8080"
 paths:
   /api/footprints:
     get:
@@ -23,7 +22,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: "#/components/schemas/Footprint"
         required: true
@@ -99,7 +98,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: "#/components/schemas/Manufacturer"
         required: true
@@ -170,71 +169,18 @@ paths:
               schema:
                 type: "array"
                 items:
-                  $ref: "#/components/schemas/MeasurementUnit"
-    post:
-      description: ""
-      requestBody:
-        content:
-          '*/*':
-            schema:
-              $ref: "#/components/schemas/MeasurementUnit"
-        required: true
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/MeasurementUnit"
-  /api/measurementUnits/{id}:
-    delete:
-      description: ""
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      responses:
-        "400":
-          description: "Bad Request"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Unit"
-    get:
-      description: ""
-      parameters:
-      - name: "id"
-        in: "path"
-        required: true
-        schema:
-          type: "string"
-      responses:
-        "400":
-          description: "Bad Request"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-        "404":
-          description: "Not Found"
-          content:
-            '*/*':
-              schema:
-                type: "object"
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/MeasurementUnit"
+                  type: "string"
+                  enum:
+                  - "VOLT"
+                  - "AMPERE"
+                  - "OHM"
+                  - "SIEMENS"
+                  - "FARAD"
+                  - "HENRY"
+                  - "WATT"
+                  - "JOULE"
+                  - "COULOMB"
+                  - "HERTZ"
   /api/partTypes:
     get:
       description: ""
@@ -251,7 +197,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: "#/components/schemas/PartType"
         required: true
@@ -327,7 +273,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: "#/components/schemas/Part"
         required: true
@@ -403,7 +349,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: "#/components/schemas/Shelf"
         required: true
@@ -479,7 +425,7 @@ paths:
       description: ""
       requestBody:
         content:
-          '*/*':
+          application/json:
             schema:
               $ref: "#/components/schemas/Tray"
         required: true
@@ -547,24 +493,17 @@ components:
         id:
           type: "integer"
           format: "int32"
-        name:
+        metric:
+          type: "string"
+        imperial:
           type: "string"
       required:
-      - "name"
+      - "metric"
+      - "imperial"
     Unit:
       type: "object"
       properties: {}
     Manufacturer:
-      type: "object"
-      properties:
-        id:
-          type: "integer"
-          format: "int32"
-        name:
-          type: "string"
-      required:
-      - "name"
-    MeasurementUnit:
       type: "object"
       properties:
         id:
@@ -608,8 +547,6 @@ components:
         value:
           type: "number"
           format: "double"
-        measurementUnit:
-          $ref: "#/components/schemas/MeasurementUnit"
         footprint:
           $ref: "#/components/schemas/Footprint"
         partType:
@@ -620,6 +557,7 @@ components:
           $ref: "#/components/schemas/Tray"
       required:
       - "name"
+      - "quantity"
       - "partType"
       - "manufacturer"
       - "tray"
